syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.filipovski.gluon.executor.proto";
option java_outer_classname = "EnvironmentRuntimeService";

message ExecutionPayload {

}

message RemoteExecutionResult {

}

service EnvironmentRuntimeDriverService {

  rpc execute(ExecutionPayload) returns (RemoteExecutionResult) {}

}